# call_jax_from_cpp

./: .bazelrc  .gitignore  README.md  WORKSPACE  pyproject.toml
call_jax_from_cpp/: simple_jax_example.py
cpp/: BUILD  main_aot.cpp  main_aot_c_api.cpp  main_hlo.cpp  main_hlo_to_serialized.cpp  main_hlo_to_serialized_c_api.cpp
hlo/: BUILD  example1.binpb  example1.txt  example1.txt.bak
mlir/: example1.bc
python/: simple_jax_example.py
serialized_executable_protos/: BUILD  example1.binpb
serialized_executables/: BUILD  example1.bytes
stable_hlo/: example1.txt
