[project]
name = "call_compiled_jax_from_cpp"
version = "0.1"
requires-python = ">= 3.12"
dependencies = [
  "jax[cpu]; platform_system != \"Linux\"",
  "jax[cuda12]; platform_system == \"Linux\"",
]
authors = [
  {name = "Joao Sousa-Pinto", email = "joaospinto@gmail.com"},
]
description = "Shows how to call compiled JAX code from C++."
license = "Apache-2.0"

[tool.black]
line-length = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
