[project]
name = "call_compiled_jax_from_cpp"
version = "0.1"
requires-python = ">= 3.12"
dependencies = [
  "absl-py",
  "flatbuffers",
  "jax[cpu]; platform_system != \"Linux\"",
  "jax[cuda12]; platform_system == \"Linux\"",
]

[tool.setuptools]
packages = ['python']

[tool.black]
line-length = 80
